# ChangeLog for dev-ruby/celluloid
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/celluloid/ChangeLog,v 1.4 2013/09/07 11:34:34 mrueg Exp $

*celluloid-0.15.1 (07 Sep 2013)

  07 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +celluloid-0.15.1.ebuild:
  Version bump.

*celluloid-0.14.1 (13 Jul 2013)

  13 Jul 2013; Hans de Graaff <graaff@gentoo.org> +celluloid-0.14.1.ebuild:
  Version bump.

*celluloid-0.13.0 (30 Apr 2013)

  30 Apr 2013; Hans de Graaff <graaff@gentoo.org> +celluloid-0.13.0.ebuild:
  Version bump.

*celluloid-0.12.4 (14 Dec 2012)

  14 Dec 2012; Hans de Graaff <graaff@gentoo.org> +celluloid-0.12.4.ebuild,
  +metadata.xml:
  Initial import. New dependency for dev-ruby/adhearsion.