@@ -2,9 +2,11 @@ DIST celluloid-0.12.4-git.tgz 45475 SHA256 91d6adf03f351b8f3d164431d1838411481c5
 DIST celluloid-0.13.0-git.tgz 49457 SHA256 8e14ac6298db0d7faba875b2f1ddb0132085f6661b434fb8d0d14d31f7b6db85 SHA512 8900245fdf7a557fac1598a0121d234edd7e24f070e11150ac95014d2763d4653d67f4aeb7da1b76f8dfa36d2fb3d8f7bde86777612b1b15ef78cdaeb1c50f17 WHIRLPOOL 0c77c6fea3f7dd9d82349a2371a5e0a317cd8444cea44446891d9947c083a3398ad9ed82c46d6e03320b171fe92f2b61c362529adc6e1a27397f6681f37e2a0f
 DIST celluloid-0.14.1-git.tgz 53456 SHA256 5fbd664490f23662f4f66f2059352bd60f8a91ae388458afb5e03e86826ba4d2 SHA512 e7d0be53a03467dd1e1286274263e6ed90f062b7b779dbad38b3d9115454dcfaa937355e9a49fbc3bd893bd6aa43b11814d69a60108a13ca134fdc75dcdadfff WHIRLPOOL db7abd262e0ab95bf079b53fa9adf3a38ff681186b4462c99cb2bd2abc1e49eff3c1a2575f3973a561ee1ab30b3cfeb18dabaa1fb05f0fc15b705624251d9083
 DIST celluloid-0.15.1-git.tgz 56010 SHA256 660bb17b4208cb5e92c65c4acd9861f764f08e8f32ec4289de55c6f180ffa8b0 SHA512 46ebd4ed5c32c29e89304123603b4a2af125f0e09ec26455abd820cd4c1fe007018f1c03c5dab176543f813c1cd7d64e0a24902e0ae2b4ddc36f7bef36696bc7 WHIRLPOOL 0b5c30f2512f23b770f504cff07ae700a74400d1b86a288827a73d53356ea94fc7d787ce05bbe610403af0fe3b5ea73b258561809e68057e8f7c643671a22b44
+DIST celluloid-0.15.2-git.tgz 56118 SHA256 7f96b74baf99fb1924a712e7f27b2eca8c28bcc2565b943785f12b03d00703ad SHA512 6f3d781d72f1b298b205d7c64e0353b81c5df20aafe2b054f5e967c01a169bfa4317645e96d86d6cdb08b85de04bb221472d8233fe8e0b0745b125e901d6d213 WHIRLPOOL b3debcf29b2d6bbff7233a711af2e7ab2a8f67ac0878439ad0db2dcf11253c47e56c394f65849761c43fac9205762c1b9b06e985534e2b2f9590ebc63d20b8c4
 EBUILD celluloid-0.12.4.ebuild 845 SHA256 afe71c57eeb785b63d3b25873bfcacebe20082a8e461a2379ad58962a279fca1 SHA512 b2379546f8e9397e68e4ada2008bcee0cf98640728818b62c2c13beb1a9fdd4131350c75f3bb0d59d6923b30ba0cc7476930832ffda12f822657bf192db8d08d WHIRLPOOL 9b0aebff2ddd0a67f56d6d3a67f1e762b3c124235deed81bcd937d7f139e61e2ae2657071a50f976d771de33ae1367093e922cc7bf3c7eed3d35f10fac5dd4f7
 EBUILD celluloid-0.13.0.ebuild 880 SHA256 e3d320272dbbb15f38312f0f4cdd236a52c67e9ca462323248394c326cc038bc SHA512 495777c953d686651367bfaca6204cde53df4eb8e2f70c662deccb2a3f5e2d93336349891fd7f3e5b9e7df274c0b4512e6112fc80c8b855ca5b06b7ce75c8684 WHIRLPOOL 21c0678832826c8579df05f1e2045fd4c3db7917d80d8e9d510e578e68764036f36e26786d6f942f71d8df1897d827fd852f71db97c0a36e271bad0e555848d6
 EBUILD celluloid-0.14.1.ebuild 880 SHA256 dfd707972bedb043846ca6e38e0bd335cf5699002b2cfe8d4cd6525644d897c7 SHA512 34fdc2691a57f954d8d3d9b5f64d4084e556db5c4971fc7eb003e485379ab6c96f1d6a3463270d07e9f73b8d77f45113f18401c4db5292c7dafc03d2ae9b25a0 WHIRLPOOL 3536d96d1422c352ce1292fc8ba07d62d693325074345087ceecff4385d8f0ee5a51f048d64529ae8739abdc5d9c65309eb38ca614ddf36d353843c716edd1a1
 EBUILD celluloid-0.15.1.ebuild 879 SHA256 d1f24ba5b87610e2159228b95adc59c1fd97394db2db3ab9d7c1836fc4fa67e9 SHA512 f425e20f932c8684ccbf8739f6c588224815ed64fdfd923dfb56c49ab7b59d19b1bc13280932d0afa3a5995b13911e6fab2f615220a7a9794754d0aef5d374b4 WHIRLPOOL 77ad7156cbfaf0d63e948c75b214f3cbc1422aaff29c6b26769f8a7590cb17da1742afbb133ee901d66415a852d436501554195d1f78b08a34abd4671d01446f
-MISC ChangeLog 768 SHA256 f4b998a8f1ea1a09660cded05cb6b82c16c1243453c9ac7ece9a6b148fb17b60 SHA512 03106d6144767426688cf0c3c1096b8f09b3bdfc5d07246453d541515c62f90747be9d2f1cdbef17cc9d09906b6a1118fb3723e0b05429cd99c69c58664e3107 WHIRLPOOL de0b5172a5f8f3cc1e570e537085a3c1592545ae9e75f54844f0c1da91422037664a76635bac7d13af4ddb0ddedb4f435d68bf3737da8fe0a1d6bfc1e0de12e5
+EBUILD celluloid-0.15.2.ebuild 879 SHA256 109c61db2e52e3214ef2b4187cfce2daa3586c55f3eeda9037674900543dabe3 SHA512 53d2b5c1b42e2dcb6101770bb501ec7ad56e852b4bae97ec387fc3789cca5252d7fce16f5da19f8e4f0021a022d7912d92fded9786b417b654898a43ebcd4188 WHIRLPOOL bcecf4d72278768dcf4d36faddfc435b2dabc7928b9a74e5cc35888fecacfb2308050efe7b02ab7b9ebc5ed5cb7c07febfe279c18c7334f6d4475dd420330b08
+MISC ChangeLog 892 SHA256 ba183aac1993909bfe81dbfed2e68a1c3e8fbabc4a0f33a80df587ce958a5c3c SHA512 fe87b3d38a2dbfde1b842ff66c2491daf6d5ea9cfeef73bae070862e7faab1ebc02f0102ed191162198081da7e979f47b7ea2a387af8cef77a7231d146df0853 WHIRLPOOL 5c395ae8546bd62a71287138f1d16d06f086212ba8bd826ffad73292af1054aa0a2a9b2aa532e772ecdc79ac4682039887e555b8e1ac7387c79661800dbf2819
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
