@@ -10,6 +10,6 @@ PDEPEND=gtk? ( x11-misc/lightdm-gtk-greeter ) kde? ( x11-misc/lightdm-kde ) razo
 RDEPEND=>=dev-libs/glib-2.32.3:2 dev-libs/libxml2 sys-apps/accountsservice virtual/pam x11-libs/libX11 >=x11-libs/libxklavier-5 introspection? ( >=dev-libs/gobject-introspection-1 ) qt4? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 ) >=sys-auth/pambase-20101024-r2
 REQUIRED_USE=|| ( gtk kde razor )
 SLOT=0
-SRC_URI=http://launchpad.net/lightdm/1.7/1.7.15/+download/lightdm-1.7.15.tar.xz mirror://gentoo/introspection-20110205.m4.tar.bz2
+SRC_URI=http://launchpad.net/lightdm/1.7/1.7.18/+download/lightdm-1.7.18.tar.xz mirror://gentoo/introspection-20110205.m4.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	46e34faf3660a9fa3d374b042130fb20	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	systemd	e80fe2d5b43ec0f0160c6e8ef931fa4c	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=96f6725906ab48b1e5bc9168a4925118
+_md5_=703f572707c543ebeb3ad79d9ecbfca7
