@@ -15,8 +15,8 @@ DIST lightdm-1.2.2.tar.gz 642334 SHA256 772cc6a4e7da670352f6a38c05470b8fcfe50a2c
 DIST lightdm-1.4.0.tar.gz 660979 SHA256 3486a9f828864a78d452696cf6fef6e1dec2f4ef92a72e90ab37edf9a0824c43 SHA512 dedea48dbf2dde1a84c63691474b6452340b7ba5abd9793afb02f3ffcdb4d664432e3e4bbd6151bfb5861424c1063b42ca99989642b970b4a804ed8bfea6fb1e WHIRLPOOL 0def63f88e3f6ab810411bd51f53984d5cdb832faa81f33d0dd2243b774c06362d20d1c91d32c79f2630c8e543834ed3f5cf411c76843702ed997f60bad30212
 DIST lightdm-1.4.3.tar.gz 686161 SHA256 0c21ccd00c63da28f2b2e282df542d19427ab2f62aae994536fe444f31b0dd4c SHA512 8499ddda3fc07fdbecd5f7e958e5e19cb8a8397248f6dcf5d3640a28d57019a64d2440c8135a634ad1dc39a8a567ebc15b973a33b29ceb6d67c7ebd5c5870658 WHIRLPOOL 252ef8cb56f2314492c5c5e6da28ea08ac04b4d5ccec40d9329e7b25775e8a9c4ca90dedbf840cc2849f6f32534d3d682ac713d50c9e06726f95456578650870
 DIST lightdm-1.6.2.tar.xz 430528 SHA256 b0de1dc81bb5ce81800feafb9fbc7806ef4dfc83733f0df058568e55b8a045f3 SHA512 7d72ce71241a73559ffbea3f1cae05744bbfa5430ed392522f21fcb710089e2cd202f8514476d087d65b6f8c4b415f31fb8c50c29e14ff67e12b48f4d2fff4ca WHIRLPOOL 57b6792fde24cecb3061eae4dc0641da78d8535f9555a49dd6e383b7f5e5aae31ee3c59daa08ed43584988f2f0022722c3ff09e31000f17b1b56ac581409c30c
-DIST lightdm-1.7.15.tar.xz 446228 SHA256 2835cfa4b47fb0b7f9b873f1c8e4014e092826e2ac772ffa4f75763a846fe5c2 SHA512 9419feff1b891ef37494d5f11880c29b88a89eb693c10dc6ad22c10e3a1ef78d56410c0d2064122382a1a1ca84ced29626d49a1ac573996aaeac4d339a1d3dc4 WHIRLPOOL 20a43c5a2d7a2a1817a3dc91fe0affe6bda1501686897e4dda9cdd26e387e8a9b2a9dfb2f1d35399c649bfcad55892487048d0e7053556c30d4291d8a790ed66
 DIST lightdm-1.7.16.tar.xz 447680 SHA256 6cda26472f74019eb2a383664d9ea97533860dfd43f35d47a4d565800546bf00 SHA512 5cf513f2a9b5b9baaac4dd5b4575a3c1ad5af728b97f03aae6aaf4a3bbe8b35bb745a9ba1f109ced9060d2e7cf8aa3bd7c2f8d165eb555a5871ce241c1394732 WHIRLPOOL 6c2939a8e60d40b2f7a329e9e377592a5af54e34deb3acd3cd9535b77df706c5f80f174cfd06d3c48bfba098061421f09cbbde897d56308140db64deb0129ab1
+DIST lightdm-1.7.18.tar.xz 448008 SHA256 d00d175d5c8d0e5709c605623f4cbfbc25b60f938765a2f3c4e1e88b42b6b9a6 SHA512 2c9b16d183c8452f8bb83a85959862edfa8415bf4318cbde907233d97f957748863026d78304b491a8c08b83393efe220867f13c349c3aafea64dbd334bde23f WHIRLPOOL 6d1ef8043ecd3d28dd9f4eb9d1cf1fc2a32f2f58e016ed0715ed032b367ce67498adfa693df3371bcd367c6ad998114c3f056e8d911b60d56bdc8da9419ab973
 DIST lightdm-gentoo-patch.tar.gz 101983 SHA256 2e56d0ef3926428cea7870fbade77b20bd05a7664ae301aacc56504e07cf39ba SHA512 1c809fdf93969122c69ae19e934c95c1228f04546cefdb9ceeb24898a000673c4bcdb6c942c63fdb36a88a3a48192a730826db8ae9c595788be24e4cb0831590 WHIRLPOOL 9f41b035a00ea7fdeda79afcfd20487ca1524b63653874b4b74bc06e8b5d0a3dde09c225d30d5b8a79d329bd797d89b4dfe73540c3ea1de2f33e72f24f88b69f
 EBUILD lightdm-1.0.11.ebuild 3637 SHA256 9d7c348fcc2b0ff36e0c64c49094c86841dc7a4fe8149ed75853d84be9a7b52f SHA512 70d39118d38958c49579d36d27ff6230680397f5035e005f17b8b577934872933e13a0708e2b51e8ebfc1f5b11bd4e2b3fe14724a7a34c06bc2e2e11242ab214 WHIRLPOOL 727d3a962b9e624eec9c5f2d7c2d58b2ef11a5dece4e0e65f842e1a891affea027bfef831cbb93a452f9660b788a9e41a909d7acd06fe86ceb27b535a697d61d
 EBUILD lightdm-1.2.2-r3.ebuild 3049 SHA256 05c32ff785f998fcee3717a78f70b42404b7daedd8d265c0404b097686127cdb SHA512 d4043a5342fa428d53fc364095af7cc69bd488e83cb9094379d07ecca19041d1a02ae6cebfaa8cc94aa84b64c86cfa7c03cdcd66d02a7a65c15df11b853e1a4e WHIRLPOOL 2bd54df9d9ba47441ba7782c13f66922cba578b454aa6934b56ae321d36262ead6d9bb3e6d22cf5fcb2bf5ea69910228e1067e14cbc655abbbeaaddf50f5a1d0
@@ -24,24 +24,26 @@ EBUILD lightdm-1.4.0-r2.ebuild 2840 SHA256 86dae6c4fd792ead1ee0b20d40c5ba9fe6283
 EBUILD lightdm-1.4.0.ebuild 3187 SHA256 5a16917a9060f15092667bf4d90c4656bc3eeb1b7c4689603d7b0cbe0daa4722 SHA512 fa68356ccdfb63307aad7734585613eb66ffe8cc25fd0f7323bd412298ab14369c7fbca8a73fb5969e133c0932b53d725086bed007d35c0c4acb681a56156537 WHIRLPOOL 5814c82c4ff9894b97541c221b3a40c44c22fafb2afb1c443f27cddeabe61f6a88d74c638848209d8c0234dbefa216d60c1ff9a4304a75e41787356748c6e553
 EBUILD lightdm-1.4.3.ebuild 2844 SHA256 2309a13546208e58330736cf286f0c28d5fa69a7654939f429f0932a0879d09b SHA512 88578c2e178830237c77f2c530f4268a8c996e20bfc882ebbea0040cc3c3aee01a95baef6141d99ca52849f53ac0f774a8b95d921ae3ce20296f286f9e8e8e03 WHIRLPOOL da26d9f6ae0ab64875608f17278a8c73ef71e0058c82f0c755597a45266d46f62def61fbaddddbba805c7e6ff66af740cb915575e8c69d99a999833fdcff9f18
 EBUILD lightdm-1.6.2.ebuild 2788 SHA256 6be2388473c13ec79258df7db561dc6dbc4e0dc459825b60ee14e5914b409d5f SHA512 b2e5c4001f1fd8320c83615f6f3e7ea8f5a6562dc3dcd8291255be2a01bc0fa8aa8b2f337b6b2731c9065a96bd6044e4d303a0b0f2756d321a49f77c3df12531 WHIRLPOOL 718b552a4334ee744022e4f9bf29ca60dee14a36bc774764c223d54432bab5465db63552af94dc7742b28760c4959886c55dbe4d3fa8e5f825848246e664e719
-EBUILD lightdm-1.7.15.ebuild 2793 SHA256 81b19f86356276abaa6cdf9b4d9ce1f9add5a109a426e5eb09f95587ada882f7 SHA512 fdb60516c739d822f575c936f42732998eabb68e9b2a4ee17022f69655c9c44d4eedb928c1caaa5232afad8d66ca67bab3546e18bb19a0644ec554df54c3dae0 WHIRLPOOL 98f6c29f2518bf9fc2f67f0e472dff9b26fa1538e3f36d3178d75da0dbfc0ba2e63e12d16a61063c43f66af7580776d8548ea06d0b6830191b8bc8a311ea0957
 EBUILD lightdm-1.7.16.ebuild 2793 SHA256 c3b6a6c231636ac64dfb2f9a409071e46f404df148ffce8f631313bf4ee743cc SHA512 d4d5aa6812eb7c3a422f1ea8c3c7fc46340e046afb0fc1a0fac82222dd2e311e6b57b84dc5a776163d2e711e243dd9626fc953aa000d582fb74beaf9b9011d28 WHIRLPOOL 6094b1be02c582f02f17f038dbf566d373f1044b549dd08769c2cd74cfa873d2bd790181728f0b26f36825ac16ab72296b17a92351810bd187515c911d907b60
-MISC ChangeLog 12044 SHA256 a7a475ee7ddbb0e50cfbf655f71ffd1602ae95c4c69475f3e8c7bc415f517da3 SHA512 e2f560c429ca69a5fac951cfef9e8f3bd749d84e16a4cb1edde76ccb5c1b5a3e09431fc106f82bc64096f8339464034c6dee791cee231a45e7a7321615302ca6 WHIRLPOOL 8c9d9044a901f8fded5d29c9173b8edffe36ab67b49ca41d8c70d5cbd92de06474b181babd04f40a360a7f46201a0702757daf2caaa75bd205d049be57c573e8
+EBUILD lightdm-1.7.18.ebuild 2793 SHA256 992d727dbefb96ce293e09d0dafa3ebff137d6c6ece4d93d7c495eee67ce8da9 SHA512 fcf25deb47ac1a698ced4658b0c63344c740bf41570e77ac43596075194a0718b82d121293d6614f1b0909cc8a0f4a1fb7e0bed46782cd8e87c3159d20c910c9 WHIRLPOOL 342c7a9f6aeaca474a6f50fe9e54466705890e44e9b4dd1c1eca1aa7cbcf241f37d36b107b5d3dd3f0c5824d71042c46864e580a012209d27b65ef337ed69c77
+MISC ChangeLog 12194 SHA256 3997e8fba823f87af2f015b63863e75b24398bd8c43fd2284a89df03857d9aad SHA512 d5f15c7ac7c9b98e3e7ac4267cd72e36807f569fdae64b9b1aacdd141dabd46c134c58694066b024d1c6c197e4bcbd1d6eb7479af8bbc191ae80e7d589db4443 WHIRLPOOL 51b3385daf077c901d62668bfee16e2171ca8e9bd7773e90904a5aeb61c922b0304edf7bf8a24229473de93381ba3f849c8520d34011258f07910eb2bc5fed89
 MISC metadata.xml 631 SHA256 6665147507139d37a77ca1565017d3380c1b7b4a34264164d4f42ee3512a7197 SHA512 ad72edf9d23be0092d92f1d3896fa5abdb6fc26c69c467942ea953b6dd67d5d06a6f28ac37e26b437cbdad8fdbf80cf5f37ae991f8990f976ed3f26e97b1cc9b WHIRLPOOL 470d40128827bbc9d02c8f6717d223bffd622b54baabc3b1fa74133b3ca450038564efd78b5e184c78bde7f0018a724db101eb85f951973b163b01c438eda853
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSPL9fAAoJEHy/RO9cNQiDBeAP/30WjDy0DkoAm+3GbolNjn6u
-EoBpzT9An4aqTnOHHdLVfQ67JhSsnTIbgJE1byKkU9Cbn2WZLxzsHB6bCooBlNtN
-OjEC1pdO39e1XnjBJjW7z/IGhY6TdOQtc6uckX4ubStNLR77d7bDPq8ad2fxNlXv
-s9jD272EM9P5yTd7rASPkEP7sNeHH/uv2YoY1OK0CZJGqoHhFSF3W6iUFGWxPd9J
-hm8jwvXRPJjoqUchvre+0nOT6n21KbL7DiaigZmkvYe/2KOSucAF7ZJjEw874nWK
-CF4vkRDUhmDneNTzEMDBHKP9JqKvlRixuxcFyoFUGEbH+qpRSONw1heV6HSMWNR5
-Zwlumi6bs1yBS5J8ZpOIqHk4XwBlqWPItgvOIoWwTsNgwAZJ8p3Y3qQLgMFflMls
-wvtMMv9VNHwc02GEXeDeL6NUaHhbVdsJTgDzquqJcPMSFDRzWXz6IrsxAcaFe7rq
-6jrCI0D/QLs/D8FCirWFosMoIzqUWXEV+GwQaEizOon2f5bp2M9TWLFO4XkZnQz5
-zvWvCFhF1cGN7wYpWuok+erH8kjS7rzwYHOA8l+2Hh69gJWu6+caFxJe3DkuPXw5
-bOGibmbWRQbmlWmje5kwWb73i7Y/Wf/UanOzzT8VWsW3bXCNGR4Y06tC9dYn/K/L
-ZODEnS/Qk+ukWGMoOwS0
-=CB4r
+iQJ8BAEBCABmBQJSVQpcXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88JkAP/0vpaWJ0s83sRxf0PSq/c47C
+fulP5Ho+iFqxHNG71rqFXkd6m11L5FwiqjXFCZnDMmLbtv6rnkrNLnBE7umEXERk
+qY9JmisptA+xV0TdUHrjLAucgn4l8JdSChHEkxm/6l2/zE9JXcz/tNr/oluJ3IhX
+CjabYSRRvg5cXFYKXTgQGErt2mr9Bgi4MkN1OYm0N7kmMszxXhb9bT2UlIhi3VxM
+rp+JdtLNRNbjx8/f9tQbLdhjhIJYqtrLEN15AlXmnwgpV2HH+jF0aCmZQwIUOdl9
+0g9horSJPXvEy9Zhv/ld9Sumy7T4Rr4ZWOwIRFAWJLP6Xt1b1W9T6WJiVrR0LkWB
+mBTjC533Jir5Owhgs1s/LKB6HAY8w0oasx4dFlGkB+5xsG+ELaJ2Dh7CdhwZBN5z
+2eRM1z7BUgKKNTjJb/6K6DNFq18zS3XJgBzX3M3TH2Co9PJm6qMk0GvkxTJHhMAR
+f9TpDFogpyTPtXRYS8KrRgMoqPLbILaAIVtUF9eNDF875QverqCnNlhojxXWHf/T
+hcNd5yvw6jeLdzKJjoxD2GKySXifU8H+VaZUEyC6kvzRCg8JomhgR5yIsWa4nPm5
+RXFERzUHbOJwa5RUZZ3fvz/Ad5YqVe8oo4/NK6o7DNmPSbftztITLT8rB1HPXiOg
+lGwQHm3c//5k2R2tB8Js
+=LYBx
 -----END PGP SIGNATURE-----
