@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/lightdm-1.7.15.ebuild,v 1.1 2013/09/11 19:48:10 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/lightdm-1.7.18.ebuild,v 1.1 2013/10/09 07:50:06 hwoarang Exp $
 
 EAPI=5
 inherit autotools eutils pam readme.gentoo systemd
