@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/lightdm
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.72 2013/09/20 21:30:39 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.73 2013/10/09 07:50:06 hwoarang Exp $
+
+*lightdm-1.7.18 (09 Oct 2013)
+
+  09 Oct 2013; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.7.18.ebuild,
+  -lightdm-1.7.15.ebuild:
+  Version bump
 
 *lightdm-1.7.16 (20 Sep 2013)
 
