@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/celluloid
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/celluloid/ChangeLog,v 1.4 2013/09/07 11:34:34 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/celluloid/ChangeLog,v 1.5 2013/10/09 07:32:52 mrueg Exp $
+
+*celluloid-0.15.2 (09 Oct 2013)
+
+  09 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +celluloid-0.15.2.ebuild:
+  Version bump.
 
 *celluloid-0.15.1 (07 Sep 2013)
 
